--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "CountriesAPI": "https://restcountries.com/v3.1/",
+  "CountriesAPI": "https://restcountries.cbgaom/v3.1/",
   "AllowedHosts": "*"
 }
