--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MSSQLConnection" : "Server=localhost; Database=DemoAPIDB; Trusted_Connection=False; User Id=SA; Password = MySecretD1ff1cultPassw0rd!; encrypt=False;"
   }
 }
